k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ems-ingress
  namespace: ems
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "16m"
spec:
  rules:
    - host: ems.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ems-service
                port:
                  number: 80
